# precommend

./: .gitignore  .pre-commit-config.yaml  COPYING.md  FILESTRUCTURE.md  LICENSE.md  MANIFEST.in  README.md  TODO.md  bump_identify.py  pyproject.toml  sync.py
.github/workflows/: bump.yml  ci.yml  pypi.yml
doc/: api.rst  conf.py  index.rst
precommend/: .pre-commit-config.yaml  __init__.py  __main__.py  core.py  rules.py
precommit_recommendations/: .pre-commit-config.yaml  __init__.py  __main__.py  core.py  rules.py
tests/: conftest.py  test_cli.py  test_core.py  test_precommit_recommendations.py
tests/data/cpp/: CMakeLists.txt
