# This section describes the requirements of the build/installation
# process itself. Being able to do this was the original reason to
# introduce pyproject.toml
[build-system]
requires = [
    "setuptools >=61",
    "setuptools_scm >=7",
]
build-backend = "setuptools.build_meta"

# This section provides general project metadata that is used across
# a variety of build tools. Notably, the version specified here is the
# single source of truth for precommit_recommendations's version
[project]
name = "precommend"
description = "Opinionated initialization of pre-commit configurations"
readme = "README.md"
maintainers = [
    { name = "Dominic Kempf", email = "ssc@iwr.uni-heidelberg.de" },
]
dynamic = ["version"]
requires-python = ">=3.8"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "click",
    "identify >= 2.5.35",
    "pre-commit >= 3.6.2",
    "ruamel.yaml",
]

[project.optional-dependencies]
tests = [
    "pytest",
]

# Command line scripts installed as part of the installation
[project.scripts]
precommend = "precommend.__main__:main"

# The following section contains setuptools-specific configuration
# options. For a full reference of available options, check the overview
# at https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
[tool.setuptools]
packages = [
    "precommend",
]

# Configure setuptools_scm, which extracts the version number from
# the version control system. For more information see its documentation:
# https://github.com/pypa/setuptools_scm
[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "node-and-date"
write_to = "precommend/_version.py"

# The following is the configuration for the pytest test suite
[tool.pytest.ini_options]
testpaths = [
    "tests",
]
